git-svn-id: svn://svn.code.sf.net/p/scriptlandia/code/trunk@486 9700c210-9314-0410-bd77-8714033700fb